--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>EJ Tutors' Team </title>
+  <title> EJ 數理團隊 </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -86,7 +86,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>Better Solutions For Your Business</h1>
+          <h1>Ｈero or Zero</h1>
           <h2>We are team of talented designers making websites with Bootstrap</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
@@ -149,7 +149,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              我們是創立於2023年的 "EJ Tutors' Team" 的教學團隊
+              我們是創立於2023年的 "E J 數理團隊"
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> 擁有完整的題庫資源</li>
